# wikidata-consumer

./: .gitignore  .gitmodules  .ocamlformat  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  dune-project  shell.nix  wikidata-consumer-lib.opam  wikidata-consumer.opam
.github/workflows/: ci.yml
lib/: Battle_event.ml  Battle_event.mli  Cli.ml  Cli.mli  Config.ml  Daemon.ml  Daemon.mli  Event_processor.ml  Event_processor.mli  Kafka_consumer.ml  Kafka_consumer.mli  Migration.ml  Mongo_driver.ml  Mongo_persister.ml  Postgres_connector.ml  dune
migrations/: 0001_init.dn.sql  0001_init.up.sql
test/: dune  test.ml  test_daemon.ml  test_parser.ml  test_wikidata_consumer.ml
